[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/MapAndTimePanel.gd" type="Script" id=1]
[ext_resource path="res://Game/World/World.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/CustomViewportControl.tscn" type="PackedScene" id=3]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="MapAndTimePanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 260 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="sceneCreatorLabel" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 20.0
text = "Scene by Rahi"
clip_text = true

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 680 )
handle_input_locally = false
hdr = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="World" parent="Viewport" instance=ExtResource( 2 )]

[node name="CustomViewportControl" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
viewportPath = NodePath("../Viewport")

[node name="LocationLabel" type="Label" parent="."]
margin_top = 676.0
margin_right = 1280.0
margin_bottom = 696.0
size_flags_horizontal = 3
text = "RRDC"
align = 1

[node name="Time" type="HBoxContainer" parent="."]
margin_top = 700.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="timeLabel" type="Label" parent="Time"]
margin_right = 1230.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "12:00"

[node name="dayLabel" type="Label" parent="Time"]
margin_left = 1234.0
margin_right = 1280.0
margin_bottom = 20.0
text = "day 0"
